--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -132,7 +132,7 @@
 
 // Shared .desc style for checkboxes and other label-based inputs
 .checkbox-wrapper .field-label--with-description .desc {
-    font-size: $size-font-body-large;
+    font-size: $size-font-body-default;
     color: $text-secondary;
     font-weight: 400;
     line-height: 1.4;
