--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -33,7 +33,7 @@
 
         .text {
             font-weight: 600;
-            font-size: $size-font-body-large;
+            /*font-size: $size-font-body-large;*/
             color: $text-primary;
         }
 
