--- a/styles/base/_typography.scss
+++ b/styles/base/_typography.scss
@@ -286,7 +286,7 @@ main.wizard--bg-dark .subtitle {
 
 main.wizard--bg-light .p-large p {
   font-size: $size-font-body-large;
-  color: $text-primary;
+  color: $text-dark-primary;
   font-weight: normal;
   font-style: normal;
   line-height: 130%;
