--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -105,7 +105,7 @@ main .form form .panel-repeatable-panel {
 
     .field-wrapper {
         color: $text-primary;
-        margin-bottom: $spacing-500;
+       /* margin-bottom: $spacing-500;*/
     }
 
     .field-label {
