--- a/blocks/form/components/radio-group/radio-group.scss
+++ b/blocks/form/components/radio-group/radio-group.scss
@@ -34,7 +34,7 @@
         .text {
             font-weight: 600;
             /*font-size: $size-font-body-large;*/
-            color: $text-primary;
+            color: $text-dark-primary;
         }
 
         .desc {
