--- a/blocks/form/components/repeatable-panel/repeatable-panel.scss
+++ b/blocks/form/components/repeatable-panel/repeatable-panel.scss
@@ -109,7 +109,7 @@ main .form form .panel-repeatable-panel {
     }
 
     .field-label {
-        margin-bottom: $spacing-300;
+       /* margin-bottom: $spacing-300;*/
     }
 
     .item-remove {
