--- a/styles/forms/_input.scss
+++ b/styles/forms/_input.scss
@@ -37,6 +37,7 @@ fieldset {
     margin-bottom: $spacing-100;
     color: $text-dark-primary;
     font-family: $font-family;
+    font-size: $size-font-label-title; // 17 → 18 → 20
   }
 }
 
