--- a/styles/forms/_labels.scss
+++ b/styles/forms/_labels.scss
@@ -14,7 +14,8 @@ main .form fieldset.radio-group-wrapper legend {
   font-weight: $font-weight-medium;
   line-height: 133%;
   letter-spacing: $letter-spacing-default;
-  margin-bottom: $spacing-100;
+  margin-bottom: 0;
+  margin-top: $spacing-300;
 }
 
 // Add required asterisk
