fix(style): JSP screen 2 layout

--- a/blocks/form/components/formhero/formhero.scss
+++ b/blocks/form/components/formhero/formhero.scss
@@ -3,7 +3,7 @@
 .wizard {
   // Temporary specificity
   // Remove this as the grid component come in
-  .panel-formhero.current-wizard-step[data-index='0'] {
+  .panel-formhero.current-wizard-step {
     display: flex;
     flex-direction: column;
     padding-left: $spacing-600;
