--- a/styles/bootstrap/_utilities.scss
+++ b/styles/bootstrap/_utilities.scss
@@ -124,6 +124,39 @@
   flex-shrink: 1 !important;
 }
 
+// Order
+.order-first {
+  order: -1 !important;
+}
+
+.order-last {
+  order: 6 !important;
+}
+
+.order-0 {
+  order: 0 !important;
+}
+
+.order-1 {
+  order: 1 !important;
+}
+
+.order-2 {
+  order: 2 !important;
+}
+
+.order-3 {
+  order: 3 !important;
+}
+
+.order-4 {
+  order: 4 !important;
+}
+
+.order-5 {
+  order: 5 !important;
+}
+
 // Responsive variants
 @each $breakpoint in map-keys($grid-breakpoints) {
   @include media-breakpoint-up($breakpoint) {
@@ -221,6 +254,31 @@
     }
     .flex-shrink#{$infix}-1 {
       flex-shrink: 1 !important;
+    }
+
+    .order#{$infix}-first {
+      order: -1 !important;
+    }
+    .order#{$infix}-last {
+      order: 6 !important;
+    }
+    .order#{$infix}-0 {
+      order: 0 !important;
+    }
+    .order#{$infix}-1 {
+      order: 1 !important;
+    }
+    .order#{$infix}-2 {
+      order: 2 !important;
+    }
+    .order#{$infix}-3 {
+      order: 3 !important;
+    }
+    .order#{$infix}-4 {
+      order: 4 !important;
+    }
+    .order#{$infix}-5 {
+      order: 5 !important;
     }
   }
 }
