--- a/styles/base/_elements.scss
+++ b/styles/base/_elements.scss
@@ -25,6 +25,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-rendering: optimizeLegibility;
+  min-height: 100vh;
+  padding-bottom: 85px; // Reserve space for the footer
+  box-sizing: border-box;
 }
 
 ol,
