--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -1,115 +1,48 @@
 @use '../../../../styles/settings' as *;
-@use '../../../../styles/settings/breakpoints' as *;
 
-/******************************
-    Base Panel Styling
-*******************************/
-.panel-formcontextualhelp {
-  padding: $spacing-400 $spacing-300;
-  background: var(--Shades-Blues-Blue-10, #E6F2FA);
-  display: block;
-  border-radius: var(--Corner-radius-Mid, 8px);
-  border: 1px solid var(--Stroke-Tertiary, #A1B3C8);
-  margin-bottom: $spacing-600;
+.field-summary {
+    padding: $spacing-600 0;
+    border-top: solid 2px $color-shade-navy-20;
 
-  // Elevation-1
-  box-shadow: 0px 2px 4px 0px rgba(22, 44, 69, 0.20);
+    .edit {width: 56px;
+        height: 26px;
+        background-image: url('../../../../icons/icon-repeatable-panel-edit-blue.svg');
+        background-repeat: no-repeat;
+        display: block;
+        text-align: center;
+        padding-left: 28px;
+        text-decoration: underline;
 
-  width: 100%;
-
-  @include media('tablet') {
-    width: 70%;
-  }
-
-  @include media('desktop') {
-    width: 50%;
-  }
-
-  > legend {
-    margin-bottom: 0;
-    display: flex;
-  }
-
-  .panel-formcontextualhelp__header {
-    display: flex;
-    align-items: center;
-    margin-bottom: $spacing-200;
-  }
-
-  .panel-formcontextualhelp__icon {
-    margin-right: $spacing-200;
-    width: 24px;
-    height: 24px;
-  }
-
-  .panel-formcontextualhelp__title {
-    color: $text-dark;
-    font-feature-settings: 'liga' off, 'clig' off;
-    font-family: $font-family;
-    font-size: $size-font-h6;
-    font-style: normal;
-    font-weight: $font-weight-bold;
-    line-height: 125%;
-    letter-spacing: $letter-spacing-default;
-  }
-
-  .plain-text-wrapper {
-    p {
-      margin-top: 0;
-      padding: $spacing-100 0;
-
-      &:last-child {
-        margin-bottom: 0;
-      }
-    }
-  }
-
-  &--info {
-    .panel-formcontextualhelp__icon {
-      content: url('images/icon-contextual-help-info-blue-info.svg');
-    }
-
-    .panel-formcontextualhelp__footer__link {
-      display: inline-flex;
-      align-items: center;
-      text-decoration: none;
-      color: var(--Text-Dark-Primary, #333);
-      font-weight: 500;
-
-      &:hover,
-      &:focus {
-        color: var(--Text-Dark-Primary, #333);
-        text-decoration: none;
-      }
-
-      &::after {
-        content: url('images/icon-contextual-help-arrow-navy-right.svg');
-        /*content: '\2192'; // Unicode right arrow*/
-        margin-left: 0.5rem;
-        font-size: 1.25rem;
-        line-height: 1;
-      }
-    }
-
-    // Merged Anchor Link Text Styles
-    .panel-formcontextualhelp__footer__link-text {
-      margin-right: 0.75rem;
-      color: $text-dark;
-      font-weight: 500;
-      text-decoration: none;
-      text-underline: none;
-      transition: color 0.2s ease;
-
-      &:hover,
-      &:focus {
+        font-family: $font-family;
+        font-size: $size-font-body-default;
+        font-style: normal;
+        font-weight: $font-weight-medium;
+        line-height: 133%;
+        letter-spacing: $letter-spacing-default;
         color: $text-accent;
-        text-decoration: none;
-        text-underline: none;
-      }
 
-      &:visited {
-        color: $text-dark;
-      }
+        &:hover,
+        &:focus,
+        &:visited {
+            color: $text-dark;
+        }
     }
-  }
+
+    .summary-entry,
+    .item {
+        padding-right: $spacing-400;
+
+        &:not(:last-child) {
+            padding-top: $spacing-400;
+            padding-bottom: $spacing-400;
+        }
+
+        &:last-child {
+            padding-bottom: 0;
+        }
+
+        > :first-child {
+            font-size: $size-font-body-large;
+        }
+    }
 }
