--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -4,7 +4,8 @@
     padding: $spacing-600 0;
     border-top: solid 2px $color-shade-navy-20;
 
-    .edit {width: 56px;
+    .edit {
+        width: 56px;
         height: 26px;
         background-image: url('../../../../icons/icon-repeatable-panel-edit-blue.svg');
         background-repeat: no-repeat;
@@ -47,35 +48,36 @@
     }
 
 
-// fonts
+    // fonts
 
-.panel-wrapper.field-panel-review h2 {
-    color: $color-primary-navy;
-    font-feature-settings: 'liga' off, 'clig' off;
-    font-family: $font-family;
-    font-size: $size-font-h2; // clamp(36px, 5vw, 48px)
-    font-style: normal;
-    font-weight: 700;
-    line-height: 110%; // 52.8px max
-}
-}
+    .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary h2 {
+        color: $color-primary-navy;
+        font-feature-settings: 'liga' off, 'clig' off;
+        font-family: $font-family;
+        font-size: $size-font-h2; // clamp(36px, 5vw, 48px)
+        font-style: normal;
+        font-weight: 700;
+        line-height: 110%; // 52.8px max
+    }
 
-.summary-entry__language {
-    color: var(--Text-Dark-Primary, #333);
-    font-family: $font-family;
-    font-size: $size-font-body-default;
-    font-style: normal;
-    font-weight: $font-weight-bold;
-    line-height: 160%; /* 27.2px */
-}
 
-.summary-entry__cb_english_proficiency {
-    color: var(--Text-Dark-Primary, #333);
-    font-family: $font-family;
-    font-size: $size-font-body-default;
-    font-style: normal;
-    font-weight:$font-weight-regular;
-    line-height: 160%; /* 27.2px */
+    .summary-entry__language {
+        color: var(--Text-Dark-Primary, #333);
+        font-family: $font-family;
+        font-size: $size-font-body-default;
+        font-style: normal;
+        font-weight: $font-weight-bold;
+        line-height: 160%; /* 27.2px */
+    }
+
+    .summary-entry__cb_english_proficiency {
+        color: var(--Text-Dark-Primary, #333);
+        font-family: $font-family;
+        font-size: $size-font-body-default;
+        font-style: normal;
+        font-weight: $font-weight-regular;
+        line-height: 160%; /* 27.2px */
+    }
 }
 
 
