--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -1,84 +1,81 @@
 @use '../../../../styles/settings' as *;
+@use '../../../../styles/base' as *;  // Testing RW
+
 
 .field-summary {
-    padding: $spacing-600 0;
-    border-top: solid 2px $color-shade-navy-20;
-
-    .edit {
-        width: 56px;
-        height: 26px;
-        background-image: url('../../../../icons/icon-repeatable-panel-edit-blue.svg');
-        background-repeat: no-repeat;
-        display: block;
-        text-align: center;
-        padding-left: 28px;
-        text-decoration: underline;
-
-        font-family: $font-family;
-        font-size: $size-font-body-default;
-        font-style: normal;
-        font-weight: $font-weight-medium;
-        line-height: 133%;
-        letter-spacing: $letter-spacing-default;
-        color: $text-accent;
-
-        &:hover,
-        &:focus,
-        &:visited {
-            color: $text-dark;
-        }
-    }
-
-    .summary-entry,
-    .item {
-        padding-right: $spacing-400;
-
-        &:not(:last-child) {
-            padding-top: $spacing-400;
-            padding-bottom: $spacing-400;
-        }
-
-        &:last-child {
-            padding-bottom: 0;
-        }
-
-        > :first-child {
-            font-size: $size-font-body-large;
-        }
-    }
-
-
-    // fonts
-
-    .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary h2 {
-        color: $color-primary-navy;
-        font-feature-settings: 'liga' off, 'clig' off;
-        font-family: $font-family;
-        font-size: $size-font-h2; // clamp(36px, 5vw, 48px)
-        font-style: normal;
-        font-weight: 700;
-        line-height: 110%; // 52.8px max
-    }
-
-
-    .summary-entry__language {
-        color: var(--Text-Dark-Primary, #333);
-        font-family: $font-family;
-        font-size: $size-font-body-default;
-        font-style: normal;
-        font-weight: $font-weight-bold;
-        line-height: 160%; /* 27.2px */
-    }
-
-    .summary-entry__cb_english_proficiency {
-        color: var(--Text-Dark-Primary, #333);
-        font-family: $font-family;
-        font-size: $size-font-body-default;
-        font-style: normal;
-        font-weight: $font-weight-regular;
-        line-height: 160%; /* 27.2px */
-    }
+    padding: 64px 0;
+    border-top: solid 2px #b0c4de;
 }
 
+.field-summary .edit {
+    width: 56px;
+    height: 26px;
+    background-image: url('../../../../icons/icon-repeatable-panel-edit-blue.svg');
+    background-repeat: no-repeat;
+    display: block;
+    text-align: center;
+    padding-left: 28px;
+    text-decoration: underline;
+    font-family: "Atkinson Hyperlegible Next";
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 133%;
+    letter-spacing: 0;
+    color: #017AC9;
+}
 
+.field-summary .edit:hover,
+.field-summary .edit:focus,
+.field-summary .edit:visited {
+    color: #134276;
+}
 
+.field-summary .summary-entry,
+.field-summary .item {
+    padding-right: 32px;
+}
+
+.field-summary .summary-entry:not(:last-child),
+.field-summary .item:not(:last-child) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
+
+.field-summary .summary-entry:last-child,
+.field-summary .item:last-child {
+    padding-bottom: 0;
+}
+
+.field-summary .summary-entry > :first-child,
+.field-summary .item > :first-child {
+    font-size: 20px;
+}
+
+.field-summary .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary h2 {
+    color: #134276;
+    font-feature-settings: 'liga' off, 'clig' off;
+    font-family: "Atkinson Hyperlegible Next";
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 110%;
+}
+
+.field-summary .summary-entry__language {
+    color: var(--Text-Dark-Primary, #333);
+    font-family: "Atkinson Hyperlegible Next";
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 160%;
+}
+
+.field-summary .summary-entry__cb_english_proficiency {
+    color: var(--Text-Dark-Primary, #333);
+    font-family: "Atkinson Hyperlegible Next";
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 160%;
+}
