--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -47,7 +47,9 @@
         }
     }
 
-    .summary-entry__language {
+    .summary-entry__language,
+    .summary-entry__course,
+    .summary-entry__title {
         color: var(--Text-Dark-Primary, #333);
         font-family: "Atkinson Hyperlegible Next";
         font-size: 17px;
@@ -55,7 +57,6 @@
         font-weight: 700;
         line-height: 160%;
     }
-
     .summary-entry__cb_english_proficiency {
         color: var(--Text-Dark-Primary, #333);
         font-family: "Atkinson Hyperlegible Next";
@@ -63,6 +64,16 @@
         font-style: normal;
         font-weight: 400;
         line-height: 160%;
+    }
+
+    .summary-entry__personal-summary {
+        color: var(--Text-Dark-Primary, #333);
+        font-family: "Atkinson Hyperlegible Next";
+        font-size: var(--Typography-Sizes-Body-Large-paragraph, 20px);
+        font-style: normal;
+        font-weight: var(--Typography-Font-weight-Regular, 400);
+        line-height: 160%; // 32px
+        letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
     }
 
     .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary {
