--- a/blocks/form/components/wizard/wizard.scss
+++ b/blocks/form/components/wizard/wizard.scss
@@ -7,9 +7,9 @@
 .wizard--bg-dark {
   .wizard {
     background: linear-gradient(
-                    135deg,
-                    $color-accent 25%,
-                    $color-primary-navy 100%
+      135deg,
+      $color-accent 25%,
+      $color-primary-navy 100%
     );
   }
 }
@@ -17,17 +17,16 @@
 .wizard--bg-mid {
   .wizard {
     background: linear-gradient(
-                    135deg,
-                    $color-shade-blue-10 25%,
-                    $color-shade-blue-25 100%
+      135deg,
+      $color-shade-blue-10 25%,
+      $color-shade-blue-25 100%
     );
   }
 }
 
 .wizard--bg-light {
   .wizard {
-    background: var(--Background-Light-Secondary, #F5FAFD);
-
+    background: var(--Background-Light-Secondary, #f5fafd);
   }
 }
 
@@ -36,15 +35,13 @@
   height: 100%;
 
   @media (max-width: 1279px) {
-    padding-left: $spacing-600;
-    padding-right: $spacing-600;
     padding-top: $spacing-600;
   }
 
   background: linear-gradient(
-                  135deg,
-                  $color-accent 25%,
-                  $color-primary-navy 100%
+    135deg,
+    $color-accent 25%,
+    $color-primary-navy 100%
   );
 
   .current-wizard-step {
@@ -74,9 +71,6 @@
   .current-wizard-step:not([data-index='1']) {
     @include media('desktop') {
       padding: $spacing-600 0;
-      margin: 32px auto;
-      width: 100%;
-      max-width: 1038px;
     }
   }
 
@@ -131,32 +125,25 @@
       width: 300px;
     }
   }
-}
 
-// Utility/hiding logic
-main .form form .wizard > fieldset > legend {
-  display: none;
-}
+  > .current-wizard-step.panel-wrapper:first-of-type
+    ~ .wizard-button-wrapper
+    > .wizard-button-prev,
+  > .current-wizard-step.panel-wrapper:last-of-type
+    ~ .wizard-button-wrapper
+    > .wizard-button-next {
+    display: none;
+  }
 
-main .form form .wizard > fieldset:not(.current-wizard-step) {
-  display: none;
-}
+  > fieldset > legend {
+    display: none;
+  }
 
-main .form form .wizard .wizard-button-wrapper .field-wrapper {
-  flex: unset;
-}
+  > fieldset:not(.current-wizard-step) {
+    display: none;
+  }
 
-main
-form
-.wizard
-> .current-wizard-step.panel-wrapper:first-of-type
-~ .wizard-button-wrapper
-> .wizard-button-prev,
-main
-form
-.wizard
-> .current-wizard-step.panel-wrapper:last-of-type
-~ .wizard-button-wrapper
-> .wizard-button-next {
-  display: none;
+  .wizard-button-wrapper .field-wrapper {
+    flex: unset;
+  }
 }
