--- a/blocks/form/components/formwelcome/formwelcome.scss
+++ b/blocks/form/components/formwelcome/formwelcome.scss
@@ -1,17 +1,7 @@
 @use '../../../../styles/settings' as *;
 
 .wizard {
-  .panel-formwelcome.current-wizard-step[data-index='1'] {
-    // padding-left: $spacing-600;
-    // padding-right: $spacing-600;
-
-    @include media('desktop') {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: center;
-    }
-
+  .panel-formwelcome.current-wizard-step {
     legend {
       display: none;
     }
@@ -34,36 +24,6 @@
         @include media('desktop') {
           margin-bottom: $spacing-600;
         }
-      }
-    }
-
-    .panel-formwelcome__header {
-      max-width: 311px;
-
-      @include media('tablet') {
-        max-width: 358px;
-      }
-
-      @include media('desktop') {
-        max-width: 458px;
-      }
-
-      * {
-        @include heading-level-3;
-        margin-bottom: $spacing-600;
-
-        @include media('desktop') {
-          @include heading-level-1;
-          padding-bottom: 0;
-          margin-bottom: 0;
-          max-width: 458px;
-        }
-      }
-    }
-
-    .panel-formwelcome__content-container {
-      @include media('desktop') {
-        width: 577px;
       }
     }
 
