--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -47,34 +47,58 @@
         }
     }
 
-    .summary-entry__language,
-    .summary-entry__course,
-    .summary-entry__title {
-        color: var(--Text-Dark-Primary, #333);
-        font-family: $font-family;
-        font-size: $size-font-body-default;
-        font-style: normal;
-        font-weight: 700;
-        line-height: 160%;
-    }
-    .summary-entry__cb_english_proficiency {
-        color: var(--Text-Dark-Primary, #333);
-        font-family: $font-family;
-        font-size: $size-font-body-default;
-        font-style: normal;
-        font-weight: $font-weight-regular;
-        line-height: 160%;
+    .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary {
+        h2 {
+            color: var(--Text-Dark-Dark, #134276);
+            font-feature-settings: 'liga' off, 'clig' off;
+
+            font-family: var(--Typography-Font-family-Primary-font, "Atkinson Hyperlegible Next");
+            font-size: var(--Typography-Sizes-Headers-H2, 48px);
+            font-style: normal;
+            font-weight: var(--Typography-Font-weight-Bold, 700);
+            line-height: 110%; // 52.8px
+            letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
+        }
     }
 
+
     .summary-entry__personal-summary {
-        color: var(--Text-Dark-Primary, #333);
+        color: $text-dark-primary;
         font-family: $font-family;
-        font-size: var(--Typography-Sizes-Body-Large-paragraph, 20px);
+        font-size: $size-font-body-large;
         font-style: normal;
         font-weight: $font-weight-regular;
         line-height: 160%; // 32px
-        letter-spacing: 0px;
     }
+
+    // Shared base styles
+    .summary-entry__language,
+    .summary-entry__course,
+    .summary-entry__title,
+    .summary-entry__licenceClassTitle,
+    .summary-entry__cb_english_proficiency {
+        color: $text-dark-primary;
+        font-family: $font-family;
+        font-size: $size-font-body-default;
+        font-style: normal;
+        line-height: 160%;
+    }
+
+    // Bold + bottom margin
+    .summary-entry__language,
+    .summary-entry__course,
+    .summary-entry__title,
+    .summary-entry__licenceClassTitle {
+        font-weight: 700;
+        margin-bottom: $spacing-100;
+    }
+
+    // Regular weight only
+    .summary-entry__cb_english_proficiency {
+        font-weight: $font-weight-regular;
+    }
+
+
 
     .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary {
         h2 {
@@ -88,7 +112,7 @@
         }
 
         span {
-            color: var(--Text-Dark-Primary, #333);
+            color: $text-dark-primary;
             font-family: $font-family;
             font-size: $size-font-body-default;
             font-style: normal;
@@ -120,5 +144,36 @@
         .email i {
             background-image: url('../../../../icons/icon-x.svg');
         }
+    }
+}
+
+.summary-entry {
+    color: $text-dark-primary;
+    font-family: $font-family;
+    font-size: $size-font-body-large; // ← updated here
+    font-style: normal;
+    font-weight: $font-weight-regular;
+    line-height: 160%; // 32px
+    letter-spacing: 0px;
+}
+
+.summary-entry__employmentDetails {
+    margin-top: $spacing-100;
+    margin-bottom: $spacing-100;
+}
+
+.field-summary {
+    .summary-entry:first-child,
+    .item:first-child {
+        padding-top: 0;
+        padding-bottom: 0;
+    }
+}
+
+.col-md-7 {
+    .summary-entry:not(:last-child):not(:only-child) {
+        border-bottom: 1px solid $stroke-tertiary;
+        padding-bottom: $spacing-300;
+        margin-bottom: $spacing-300;
     }
 }
