--- a/blocks/form/components/summary/summary.scss
+++ b/blocks/form/components/summary/summary.scss
@@ -47,7 +47,7 @@
         }
     }
 
-    .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary {
+    .panel-wrapper.field-summary-personal-details.field-wrapper {
         h2 {
             color: var(--Text-Dark-Dark, #134276);
             font-feature-settings: 'liga' off, 'clig' off;
@@ -58,57 +58,6 @@
             font-weight: var(--Typography-Font-weight-Bold, 700);
             line-height: 110%; // 52.8px
             letter-spacing: var(--Typography-Spacing-Character-Default, 0px);
-        }
-    }
-
-
-    .summary-entry__personal-summary {
-        color: $text-dark-primary;
-        font-family: $font-family;
-        font-size: $size-font-body-large;
-        font-style: normal;
-        font-weight: $font-weight-regular;
-        line-height: 160%; // 32px
-    }
-
-    // Shared base styles
-    .summary-entry__language,
-    .summary-entry__course,
-    .summary-entry__title,
-    .summary-entry__licenceClassTitle,
-    .summary-entry__cb_english_proficiency {
-        color: $text-dark-primary;
-        font-family: $font-family;
-        font-size: $size-font-body-default;
-        font-style: normal;
-        line-height: 160%;
-    }
-
-    // Bold + bottom margin
-    .summary-entry__language,
-    .summary-entry__course,
-    .summary-entry__title,
-    .summary-entry__licenceClassTitle {
-        font-weight: 700;
-        margin-bottom: $spacing-100;
-    }
-
-    // Regular weight only
-    .summary-entry__cb_english_proficiency {
-        font-weight: $font-weight-regular;
-    }
-
-
-
-    .panel-wrapper.field-summary-personal-details.field-wrapper.field-summary {
-        h2 {
-            color: #134276;
-            font-feature-settings: 'liga' off, 'clig' off;
-            font-family: $font-family;
-            font-size: 48px;
-            font-style: normal;
-            font-weight: $font-weight-bold;
-            line-height: 110%;
         }
 
         span {
@@ -145,6 +94,39 @@
             background-image: url('../../../../icons/icon-x.svg');
         }
     }
+
+    .summary-entry__language,
+    .summary-entry__course,
+    .summary-entry__title,
+    .summary-entry__licenceClassTitle,
+    .summary-entry__cb_english_proficiency,
+    .summary-entry__personal-summary {
+        color: $text-dark-primary;
+        font-family: $font-family;
+        font-style: normal;
+        line-height: 160%;
+    }
+
+    .summary-entry__language,
+    .summary-entry__course,
+    .summary-entry__title,
+    .summary-entry__licenceClassTitle {
+        font-size: $size-font-body-default;
+        font-weight: 700;
+        margin-bottom: $spacing-100;
+    }
+
+    .summary-entry__cb_english_proficiency {
+        font-size: $size-font-body-default;
+        font-weight: $font-weight-regular;
+    }
+
+    .summary-entry__personal-summary {
+        font-size: $size-font-body-large;
+        font-weight: $font-weight-regular;
+        letter-spacing: 0;
+        margin-bottom: $spacing-100;
+    }
 }
 
 .summary-entry {
@@ -155,6 +137,12 @@
     font-weight: $font-weight-regular;
     line-height: 160%; // 32px
     letter-spacing: 0px;
+
+    &:not(:last-child):not(:only-child) {
+        border-bottom: 1px solid $stroke-tertiary;
+        padding-bottom: $spacing-300;
+        margin-bottom: $spacing-300;
+    }
 }
 
 .summary-entry__employmentDetails {
@@ -167,13 +155,5 @@
     .item:first-child {
         padding-top: 0;
         padding-bottom: 0;
-    }
-}
-
-.col-md-7 {
-    .summary-entry:not(:last-child):not(:only-child) {
-        border-bottom: 1px solid $stroke-tertiary;
-        padding-bottom: $spacing-300;
-        margin-bottom: $spacing-300;
     }
 }
